# stackchan-idf

./: Makefile  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.claude/skills/release/: SKILL.md
components/avatar/: avatar.cpp  balloon.cpp  balloon.hpp  effect.cpp  effect.hpp  eye.cpp  eye.hpp  eyebrow.cpp  eyebrow.hpp  face.cpp  face.hpp  mouth.cpp  mouth.hpp
components/avatar/include/avatar/: avatar.hpp  canvas.hpp  canvas_m5gfx.hpp  draw_context.hpp
components/board/: CMakeLists.txt  board.cpp  si12t_touch.cpp
components/board/include/board/: board.hpp  si12t_touch.hpp
components/config_service/: config_service.cpp  config_store.cpp  gatt_settings.cpp  gatt_settings.hpp
components/config_service/include/config_service/: config_service.hpp
components/conversation/: CMakeLists.txt  Kconfig  base64.cpp  base64.hpp  gemini_live_client.cpp  openai_realtime_client.cpp  ws_extra_headers.hpp  xiaozhi_client.cpp
components/conversation/include/conversation/: conversation_error.hpp  conversation_service.hpp  openai_realtime_client.hpp
components/jtts/include/jtts/: phoneme.hpp
components/jtts/src/: internal.hpp  jtts.cpp  phoneme.cpp  prosody.cpp
components/wifi_config_service/: http_handlers.cpp  http_handlers.hpp  wifi_config_service.cpp
components/wifi_config_service/include/wifi_config_service/: wifi_config_service.hpp
components/wifi_config_service/web/: settings_wifi.html
docs/: index.html
main/: CMakeLists.txt  app_main.cpp  audio_codec.cpp  audio_codec.hpp  audio_stream_sink.cpp  audio_stream_sink.hpp  battery.cpp  battery.hpp  conversation_task.cpp  conversation_task.hpp  device_ui.cpp  device_ui.hpp  idf_component.yml  render_task.cpp  servo_task.cpp  shared_state.hpp  wifi_provisioning.cpp  wifi_provisioning.hpp
script/: check_html_js.sh
tools/: settings.html
tools/audio-cli/: .gitignore  Cargo.toml  README.md
tools/audio-cli/src/: main.rs
wasm/: avatar_wasm.cpp
