[package]
name = "audio-cli"
version = "0.1.0"
edition = "2021"
description = "BLE audio streaming CLI for stackchan-idf — mirrors the settings.html protocol so the browser path can be bypassed when debugging disconnects."

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "io-util", "fs", "signal"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"
uuid = "1"

# Crypto stack — matches the device-side wire format exactly.
x25519-dalek = "2"
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
rand_core = { version = "0.6", features = ["std"] }

[profile.release]
opt-level = 3
lto = "thin"
